# IveroSLAM_ros2-edge2_rgbd

./: .clang-format  CMakeLists.txt  README.md  package.xml
include/iveroslam_ros2/: CallbackHarness.h  CallbackHarnessImp.hpp  utils.h
launch/: ivero_rs_launch.py
msg/: SystemStatus.msg
src/: data_recorder.cc  ivero_slam.cc  ivero_slam_ros.cc
srv/: SystemStatus.srv
